--- a/Paper/paper.tex
+++ b/Paper/paper.tex
@@ -86,18 +86,19 @@ literature include afterglows due to infall of gas on the remnant
 black hole \citep{2005ApJ...622L..93M}, electromagnetic variability in
 the circumbinary disk due to shocks induced by the sudden mass loss of
 the binary following GW emission at coalescence
-\citep{2007APS..APR.S1010B}, flares from shocked remnants of accretion
-disk around the recoiled remnant black hole
+\citep{2007APS..APR.S1010B, 2008ApJ...676L...5L}, flares from shocked
+remnants of accretion disk around the recoiled remnant black hole
 \citep{2007PhRvL..99d1103L, 2008ApJ...682..758S, 2009CQGra..26i4032H},
 quasi-periodic variability in gas accretion in the early stages of
 black hole merger \citep{2008ApJ...672...83M, 2009CQGra..26i4032H,
-  2012MNRAS.427.2680K}, evolution in the profiles of broad emission
+  2012MNRAS.427.2680K, 2013MNRAS.436.2997D, 2014ApJ...783..134F,
+  2015ApJ...807..131S}, evolution in the profiles of broad emission
 lines shortly before merger \citep{2013MNRAS.432.1468M},
 characteristic evolution in thermal emission due to circumbinary
 accretion \citep{2015MNRAS.446L..36F}, brightening of the circumbinary
 accretion disk due to viscous dissipation of gravitational waves
 \citep{2008PhRvL.101d1101K}, and prompt tidal disruption of ambient
-stars by the recoiled remnant \citep{2011MNRAS.412...75S}. 
+stars by the recoiled remnant \citep{2011MNRAS.412...75S}.
 
 In addition to testing GR in the strong field limit, observations of
 electromagnetic counterparts will help localize sources of GWs for
@@ -141,11 +142,69 @@ the expected abundance of GW sources.
   \label{fig:BH_orbit}
 \end{figure}
 
-In this Letter we study the morphology of a jet emitted by one of the
-binary members during the binary's final phase of evolution before
+In this Letter, we study the morphology of jets from binary BHs whose
+dynamics is doiminated by GW emission.  Jets in binary BHs have been
+studied in a number of previous works \citep{1980ApJ...238L.129S,
+  1981ApJ...246L..65I, 1981ApJ...246L.141H, 1982ApJ...258L..63G,
+  1982ApJ...253L...1G, 1982ApJ...262..478G}.  It has been shown that
+the orbital motion of binary results in a precession of the jet,
+resulting in a helical or ``wiggly'' jet morphology.  Such models of
+jet precession have been used to understand the observed jet
+morphology in several AGN.  For example, recently
+\citet{2014MNRAS.445.1370K} fit a jet precession model to the observed
+jet in the quasar S5 1928$+$738 using 18 yr of very long baseline
+interferometric (VLBI) data.  This object was first studied using BH
+binary models by \citet{1993ApJ...409..130R}, but
+\citet{2014MNRAS.445.1370K} also included effects of BH spin.  Other
+objects studied in this manner are PG 1302-102
+\citep{2015MNRAS.454.1290K, 2015Natur.518...74G}, BL Lacertae
+\citep{2003MNRAS.341..405S, 2013MNRAS.428..280C}, NGC 4151
+\citep{2012ApJ...759..118B}, OJ 287 \citep{2012MNRAS.421.1861V}, S5
+1803$+$784 \citep{2008A&A...483..125R}, 3C 345
+\citep{2005A&A...431..831L}, 3C 210 \citep{2004MNRAS.349.1218C}, PKS
+420-014 \citep{2001A&A...374..784B}, 3C 273
+\citep{2000A&A...360...57R}, and Mrk 501 \citep{1999A&A...347...30V}.
+\citet{1982ApJ...262..478G} also studied several AGN using their model
+of jet precession.
+
+The shortest binary separations inferred from these studies are of the
+order of $10^{-2}$ pc.  At smaller separations of around $10^{-3}$ pc,
+the orbital velocity of the BHs typically becomes relativistic
+($v_\mathrm{orb}\sim 10^4$ km$/$s or $\beta\sim 0.01$).  It was
+thought that at these small separations, the binary evolves in a
+vacuum, because the inspiral time scale of the binary is likely
+shorter than the viscous time scale of any circumbinary gas disk.  As
+a result, gas fails to catch up with the BHs, making any accretion
+activity impossible in this stage of the binary's evolution
+\citep{2005ApJ...622L..93M, 2010PhRvD..81b4019S, 2010ApJ...714..404T}.
+However recent viscous hydrodynamical simulations do not find this
+decoupling between the BHs and the circumbinary disk.  In these
+simulations, the binary's member BHs can continue to accrete gas from
+the circumbinary accretion disk all the way until coalescence
+\citep{2012PhRvL.109v1102F, 2013MNRAS.436.2997D, 2014PhRvD..89f4060G,
+  2014PhRvD..90j4030G, 2015MNRAS.446L..36F, 2015ApJ...807..131S}.
+This opens up the possibility of jet production by one of the binary
+members during the binary's final phase of evolution before
 coalescence, i.e., when the binary's dynamics is dominated by GW
-emission.  We show that in this case the jet has a peculiar helical
-chirping morphology that can be used to infer the binary parameters.
+emission.  In this Letter we study the morphology of such jets.
+
+All of the above models of jet precession in binary BHs consider
+stable binaries, in which the time scale of evolution of the binary
+separation is much larger than the orbital period of the binary.  For
+such binaries, the helical morphology of the jet is does not change
+significantly between precession cycles.  However, we will see below
+that for a binary BH with separation $a$, the orbital period is
+proportional to $a^{1.5}$, while the time scale of evolution of the
+binary separation is proportional to $a^{4}$.  Thus, as the binary
+shrinks, the latter time scale decreases much more rapidly than the
+former, and for small enough separations, the two time scales can be
+comparable.  In this paper, we study jets in this previously ignored
+regime.  We show that at this stage of the binary's evolution, the jet
+morphology is more complicated: the jet now has a peculiar helical
+chirping morphology.  We further argue that in this case the jet
+morphology can be used to infer the binary parameters and show how
+such features can be distinguished from the usual helical jet
+morphology.
 
 \section{Binary parameters}
 
@@ -154,7 +213,7 @@ galaxies as a result of the processes described above.  We consider
 black holes with masses $M_1$ and $M_2$ in a circular orbit of radius
 $a$ around each other.  Let $M=M_1+M_2$.  For simplicity, we consider
 an equal-mass binary ($M_1=M_2$) on a circular orbit. The orbital
-speed of each black hole is given by \citep{2010PhRvD..81d7503L}
+speed of each black hole is given by 
 \begin{equation}
   v_\mathrm{orb} = \frac{1}{2}\left(\frac{GM}{a}\right)^{1/2}\!\!\!\! = 5.8\times 10^3\, \mathrm{km~s}^{-1}M_8^{1/2}a_{16}^{-1/2},
   \label{eqn:vorb}
@@ -167,16 +226,17 @@ respectively.\footnote{Note that $10^{16} \mathrm{cm}\approx 3.4\times
 The orbital period is
 \begin{equation}
   P = 2\pi\left(\frac{GM}{a^3}\right)^{-1/2}\!\!\!\! = 1.72\, \mathrm{yr}\, a_{16}^{3/2} M_8^{-1/2}.
+  \label{eqn:period}
 \end{equation}
 
 In a gas-rich galaxy merger, the BH binary loses its angular momentum
 by torquing the surrounding disk through spiral arms and expelling gas
 out of a region twice as large as the binary orbit
-\citep{2005ApJ...622L..93M, 2007PASJ...59..427H, 2008ApJ...672...83M,
-  2009MNRAS.393.1423C}.  The expelled gas carries a specific angular
-momentum of $\sim va$.  Further angular momentum dissipation of the
-binary can happen due to its interaction with fresh gas that enters
-the hollowed out region as a result of tidal torques
+\citep{1994ApJ...421..651A, 2005ApJ...622L..93M, 2007PASJ...59..427H,
+  2008ApJ...672...83M, 2009MNRAS.393.1423C}.  The expelled gas carries
+a specific angular momentum of $\sim va$.  Further angular momentum
+dissipation of the binary can happen due to its interaction with fresh
+gas that enters the hollowed out region as a result of tidal torques
 \citep{2008ApJ...672...83M, 2012ApJ...755...51N, 2012MNRAS.427.2680K,
   2012A&A...545A.127R}.  Therefore, the coalescence time of the binary
 is inversely proportional to the rate at which fresh gas re-enters the
@@ -186,7 +246,7 @@ Therefore, we express $\dot M$ in Eddington units, $\dot{\mathcal
   M}\equiv\dot M /\dot M_E$, where $\dot M_E$ is the accretion rate
 required to power the limiting Eddington luminosity with a radiative
 efficiency of 10\%, $\dot M_E=2.3 M_\odot\, \mathrm{yr}^{-1}M_8$.  We
-therefore have \citep{2010PhRvD..81d7503L}
+therefore have \citep{2010PhRvD..81d7503L, 2015MNRAS.448.3603D}
 \begin{equation}
   \frac{a}{\dot a} = t_\mathrm{gas}\approx\frac{J}{\dot Mva}=1.1\times 10^7\,
   \mathrm{yr}\,\dot{\mathcal M}^{-1},
@@ -197,7 +257,8 @@ magnitude than the time scale for coalescence due to angular momentum
 loss by GW emission, which for circular orbits is given by
 \citep{1964PhRv..136.1224P}
 \begin{equation}
-\frac{a}{\dot a} = t_\mathrm{GW} = \frac{5}{256}\frac{c^5a^4}{G^3M^2\mu}=2.53\times 10^5\,\mathrm{yr}\,\frac{a_{16}^4}{M_8^3}.
+  \frac{a}{\dot a} = t_\mathrm{GW} = \frac{5}{256}\frac{c^5a^4}{G^3M^2\mu}=2.53\times 10^5\,\mathrm{yr}\,\frac{a_{16}^4}{M_8^3}.
+  \label{eqn:shrink}
 \end{equation}
 By setting $t_\mathrm{gas}=t_\mathrm{GW}$, we can get the orbital
 parameters for the binary when GWs take over.  The orbital speed at
@@ -231,8 +292,8 @@ Note that the separation is dependent on the gas accretion rate.
       \draw (5.3,4.2) node {\large \textcolor{red}{$\mathbf{\tilde v}_\mathrm{jet}$}};
     \end{tikzpicture}
   \end{center}
-  \caption{The orbital velocity $\mathbf{v}_\mathrm{orbital}$
-    introduces the jet precision angle $\psi$.  Without the orbital
+  \caption{The orbital velocity $\mathbf{v}_\mathrm{orb}$
+    introduces the jet precession angle $\psi$.  Without the orbital
     motion, $\psi=0$, and the jet traces a cylindrical surface.  With
     the orbital motion, the net red velocity vector oscillates around
     the solid black vector and produces a conical surface with $\psi$
@@ -257,20 +318,9 @@ angle of the cone is given by \citep{1993ApJ...409..130R}
 \begin{equation}
   \sin\psi = \frac{v_\mathrm{orb}\cos\chi}{v_\mathrm{jet}}.
 \end{equation}
-
-\begin{figure}
-  \begin{center}
-    \includegraphics*[width=\columnwidth]{evolve.pdf}
-    % gw.py (case 5) 
-  \end{center}
-  \caption{Evolution of the binary parameters.  As the binary
-    separation $a$ decreases, the orbital velocity $v_\mathrm{orb}$
-    and the opening angle $\psi$ of the precessing jet, increase.
-    This example describes the evolution of a binary with
-    $M=10^8$~M$_\odot$ and $a_0=8.3\times 10^{-3}$~pc, but can be
-    scaled to other masses and initial separations.}
-  \label{fig:evolve}
-\end{figure}
+(Note that this relation is valid in the $v_\mathrm{orb}\ll
+v_\mathrm{jet}\sim c$. Also, we are ignoring any relativistic
+corrections to this equation.)
 
 When the binary separation reaches the point where gravitational
 wave-induced inspiral begins, the binary has a velocity given by
@@ -282,7 +332,8 @@ velocity of each BH evolves as
 \end{equation}
 which gives the evolution of the opening angle of the cone as 
 \begin{equation}
- \dot\psi = -\frac{1}{2\cot\psi}\frac{\dot a}{a}.
+  \dot\psi = -\frac{1}{2\cot\psi}\frac{\dot a}{a}.
+  \label{eqn:widen}
 \end{equation}
 This can be solved analytically to get
 \begin{equation}
@@ -292,9 +343,6 @@ where $\psi_0$ and $a_0$ are the initial values. Thus, as the binary
 continues to shrink the BH orbital velocity grows and the opening
 angle of the conical jet increases (cone opens wider).  The rate at
 which this happens reflects the binary's dynamical evolution.
-Figure~\ref{fig:evolve} shows the evolution of the binary separation,
-orbital velocity, and the half-opening angle for a binary in the
-GW-dominated phase.
 
 \section{Jet precession}
 
@@ -351,12 +399,15 @@ GW-dominated phase.
   \end{tabular}
 \end{center}
 \caption{The left panel shows forward and backward jets for an
-  equal-mass binary with total mass $M=10^{10}$~M$_\odot$.  We have
-  assumed $i=40^\circ$, $\beta=0.9$, and angular diameter distance $d
-  = 100$~Mpc.  The jets are twisted because of the apparant
-  superluminal motion.  Also evident is the opening of the jet and the
-  radio jet chirp.  Right panel shows normalised brightness of the
-  inner 30~mas region of the forward jet.}
+  equal-mass binary with total mass $M=10^{10}$~M$_\odot$.  (This
+  figure shows the position of many jet particles observed at a fixed
+  time on Earth.)  We have assumed $i=40^\circ$, $\beta=0.9$, and
+  angular diameter distance $d = 100$~Mpc.  The jets are twisted
+  because of the apparant superluminal motion.  Also evident is the
+  opening of the jet and the radio jet chirp.  Right panel shows
+  normalised brightness of the inner 30~mas region of the forward
+  jet. (This panel shows the intensity of many particles observed at a
+  fixed time on Earth.)}
 \label{fig:jet_mdot1.0}
 \end{figure*}
 
@@ -409,34 +460,13 @@ $[\gamma(1-\beta\cos\phi)]^{-1}$ and $S_r$ is the rest frame flux
 density.  Further, to consider the effects of jet evolution we assume
 that $S_r$ decreases with time according to a simple power law
 \begin{equation}
-  S_r\propto t^{-\delta}.
+  S_r\propto t_\mathrm{proper}^{-\delta},
 \end{equation}
+where $t_\mathrm{proper}$ is the proper time in the frame of the jet.
 We assume $\delta=1$ and $\alpha=1$, hereafter
 \citep{1982ApJ...262..478G}.
 
-\begin{table}
-\begin{center}
-\begin{tabular}{c l}
-\hline 
-Parameter & Description \\ 
-\hline 
-$M$ & Total mass \\
-$\zeta$ & Mass asymmetry \\
-$\chi$ & Intrinsic jet direction \\
-$e$ & Orbital eccentricity \\
-$\alpha$ & SED slope \\
-$\delta$ & Time evolution of brightness evolution \\
-$\beta$ & Jet speed \\
-$i$ & Orbital inclination \\ 
-$\dot{\mathcal M}$ & Gas accretion rate\\
-\hline
-\end{tabular}
-\end{center}
-\caption{Parameters of the problem.}
-\label{table:params}
-\end{table}
-
-\section{Flagging GW binaries and probing GR}
+\section{Jet Morphology}
 
 As the binary evolves, the combination of increasing orbital speed and
 the apparant superluminal motion effect results in a jet morphology
@@ -465,23 +495,154 @@ Figure~\ref{fig:jet_mdot1.0}.  The chirp is easier to resolve in jets
 that are closer to the line of sight, where superluminal motion can
 magnify the forward jet.  A chirping black hole is an unambiguous
 signature of a rapidly evolving binary BH system; the chirp is direct
-reflection of the orbital velocity evolution in
-Figure~\ref{fig:evolve}.  Together, the three features of the jet
-morphology in Figure~\ref{fig:jet_mdot1.0}, namely, conical jet
-geometry with an increasing opening angle, a radio chirp geometry, and
-an asymmetrical shape, directly probe the dynamics of the binary in
-its GW phase.
+reflection of the orbital velocity evolution of the binary. Together,
+the three features of the jet morphology in
+Figure~\ref{fig:jet_mdot1.0} are:
+\begin{itemize}
+\item Increase in the helicity of the jet towards the central source (``chirpyness''),
+\item Widening of the opening angle towards the central source, and 
+\item An apparant variation in the jet precession axis towards the central source (``twist''). 
+\end{itemize}
+These directly probe the dynamics of the binary in its GW phase.
 
-Observations of such a milliarcsecond geometry can thus constrain GR
-in the strong field limit.  The relative separation of the jet winding
-directly constraints the ratio $a_{16}^4/M_8^3$ by constraining the
-evolution of the orbital velocity.  The jet opening angle evolution
-tracks the evolution of the binary separation.  We make the code for
-implementing the model presented in this Letter available at
-\url{https://github.com/gkulkarni/JetMorphology} under the MIT open
-source software license.  This code can be used to explore the
-dynamical, astrophysical, and geometrical parameter spaces of the
-model.
+\subsection{Can chirping jets be observed?}
+
+Observations of such a milliarc second scale geometry with the three
+features described above can thus flag a BH binary nearing the end of
+its merger.  We now consider the question of whether such morphologies
+will be measurable in real observations. 
+
+As discussed in Section~\ref{sec:intro}, several helical jets have
+been observed thanks to VLBI.  A resolution of few tens of microarc
+seconds can be achieved using the Very Long Baseline Array (VLBA) with
+sensitivity of up to 30 $\mu$Jy$/$beam, as demonstrated by the MOJAVE
+survey \citep{2009AJ....138.1874L}.  VLA has angular resolution of few
+tens of milliarcsecconds with a sensitivity of about 100
+$\mu$Jy$/$beam.  The European VLBI network (EVN) which can resolve up
+to 0.13 milliarc seconds and can detect surface brightness down to 19
+$\mu$Jy$/$beam.  The Very Large Array (VLA) has an angular resolution
+of few tens of milliarcsecconds with a sensitivity of about 100
+$\mu$Jy$/$beam.  The future Square Kilometer Array (SKA) on its own
+will have 2 milliarc second resolution at around 10 GHz, but SKA will
+be an order of magnitude more sensitive than current instruments with
+a sensitivity of about 50 nJy$/$beam.  Thus angular resolution of tens
+to hundreds of microarc seconds and flux sensitivity of a few
+$\mu$Jy$/$beam is achievable with current VLBI instruments.
+
+The brighter part of the jet (intensity within factor of 10 from the
+maximum) in Figure~\ref{fig:jet_mdot1.0} (right panel) has separations
+of $\sim 1$ mas.  It should therefore be possible to resolve the jet
+at an angular resolution of $\sim 2$ mas.  (In the next section, we
+discuss an algorithm to fit the jet model to observational data.)  If
+it is aligned closer to the line of sight, the forward jet is
+magnified due to apparant superluminal motion.  This will make it
+possible to resolve jets of objects that are farther away than the
+example in Figure~\ref{fig:jet_mdot1.0}.  Binaries with higher masses
+have large orbital periods that will result is a helix with wider
+seperation between its cycles.  These objects would therefore be
+easier to detect.  We have not modelled the absolute surface
+brightness of jets, only relative variation in the jet brightness (as
+shown in Figure~\ref{fig:jet_mdot1.0}), but due to the $(1+z)^{-4}$
+dimming, it will be exceedingly difficult to detect such jets at
+higher redshifts.
+
+We note here that there is at least one object in the literature that
+shows a jet morphology similar to Figure~\ref{fig:jet_mdot1.0}.  The
+quasar 4C 18.68 described by \citet{1982ApJ...253L...1G} shows a
+helical jet with an apparant opening angle that increases towards the
+central source from 11$^\circ$ to 45$^\circ$ in just two cycles
+\citet{1982ApJ...262..478G}.  The observing beamwidth of about 400 mas
+makes it difficult to resolve a chirp in this source, but it is a
+prototype of the morphology that we are discussing here.
+\citet{2015MNRAS.453.1562G} have reported that 111 candidates show
+periodic variability in brightness in the Cataline Real-time Transient
+Survey, indicating presence of binary BHs.  An analysis of these
+candidates suggests the presence of circumbinary gas at small orbital
+distances \citep{2015MNRAS.453.1562G}.  This bodes well for the
+likelihood of the presence of chirpy jets.  In low resolution wide
+field survey, detecting modulations in the lightcurves would be an
+easier diagnostic of a binary BH \citep{2011ApJ...743..136O,
+  2011ApJ...734L..37K}.
+
+\subsection{Deriving binary parameters from observations of chirping jets}
+
+From observations of chirping jets, we can infer the dynamical
+parameters of the binary BH by first fitting a purely geometric model
+to the observed jet morphology.  To create a model of this kind, we
+generalise the simple helical model considered by
+\citet{2014MNRAS.445.1370K} and \citet{2001NewA....6...61N} to write
+\begin{align}
+  z &= x^{-\alpha} \frac{B}{2\pi} u \cos{u}, \\
+  y &= x^{-\alpha} \frac{B}{2\pi} u \sin{u}, \\
+  x &= \frac{A}{2\pi} u \left(\frac{u}{2\pi}\right)^\beta.
+\end{align}
+Here $u$ is the azimuthal angle around the jet axis, $x$ and $y$ axes
+are in the plane of the sky, and the $z$ axis points to the observer.
+The $x^{-\alpha}$ term in the first two equations captures the
+widening opening angle of the jet, while the $(u/2\pi)^{\beta}$ term
+in the last equation parameterises the chirp.  This model can be fit
+to an observed jet on the sky by using two rotation matrices,
+$\mathcal{R}_\lambda$ and $\mathcal{R}_i$, which rotate the model
+in the above equtions to match with the jet precession axis and the
+jet symmetry axis.  These matrices are given by
+
+\begin{flalign}
+\mathrm{R}_{i} \!=\!
+\begin{pmatrix}
+\cos i & 0 & \sin i \\ 
+0 & 1 & 0 \\ 
+-\sin i & 0 & \cos i
+\end{pmatrix}
+\label{riota}
+\end{flalign}
+and
+\begin{flalign}
+\mathcal{R}_{\lambda}\!=\!
+\begin{pmatrix}
+\cos \lambda{_0} & -\sin \lambda{_0} & 0 \\ 
+\sin \lambda{_0} & \cos \lambda{_0} & 0 \\ 
+0 & 0 & 1%
+\end{pmatrix}.
+\label{rlambda}
+\end{flalign}
+Further, we can parameterise the ``twist'' in the jet by requiring
+that $i$ and $\lambda$ vary with $x$.  Without loss of generality,
+we take this variation in $i$ and parameterise it as
+\begin{equation}
+  i = \gamma x + i_0.
+\end{equation}
+We thus arrive at a model with 7 parameters ($\alpha$, $\beta$,
+$\gamma$, $A$, $B$, $i_0$, $\lambda_0$), which can be fit to any
+observed jet, such as that in Figure~\ref{fig:jet_mdot1.0}.  Note that
+setting $\alpha$ and $\beta$ equal to $0$ yields the usual helical jet
+morphology, without the features discussed in this paper.  Thus, a
+non-zero value of these two parameters distinguishes chirpy jets from
+non-chirpy ones.
+
+The best fit geometric parameters can then be used to derive the
+dynamical parameters of the BH binary in the following way.  The
+parameters $\alpha$ and $B$ quantify the widening of the opening angle
+$\psi$.  As each cycle of the observed helical jet corresponds to a
+period $P(t)$ of the binary, we can then write $d\psi/dP$, which
+yields a constraint on the quantity $a^4/M^3$ as a function of $P$ via
+Equations (\ref{eqn:period}), (\ref{eqn:shrink}) and
+(\ref{eqn:widen}).  The parameters $A$ and $\beta$, which quantify the
+chirp, can be used to directly infer the evolution of the binary
+separation as $da/dP$, which also contraints the quantity $a^4/M^3$
+via Equation~(\ref{eqn:shrink}). These two constraints can be used to
+determine $a(P)$ and $M$ separately.  Finally, the parameters
+$i_0$, $\lambda_0$, and $\gamma$ quantify the twist in the jet,
+which can potentially be used to constrain the quantity
+$\dot{\mathcal{M}}$ by using Equation~(\ref{eqn:v}).
+
+Further parameters can be introduced in the dynamical model by
+considering unequal-mass binaries, eccentric orbits, and
+Post-Newtonian corrections, but we not develop this further in this
+Letter.  We make the code for implementing the model presented in this
+Letter and for fitting it to observed jets using MCMC analyses
+available at \url{https://github.com/gkulkarni/JetMorphology} under
+the MIT open source software license.  This code can be used to
+explore parameter space of the model.
 
 \section{Conclusion}
 
@@ -497,8 +658,7 @@ the conical surface increases with the orbital period of the binary in
 this stage of its evolution.  Finally, due to the apparent
 superluminal motion and the widening opening angle, the jet is twisted
 into a peculiar morphology.  The jet geometry can be used to infer the
-set of dynamical and geometrical parameters listed in
-Table~\ref{table:params}.
+set of dynamical and geometrical parameters.
 
 Milli-arcsecond features can be resolved using long baseline radio
 interferometry \citep{2001ChJAA...1..236Q}.  At higher redshifts, jets
@@ -525,9 +685,10 @@ processes in the strong-field GR regime \citep{2005ApJ...629...15H}.
 
 \section*{Acknowledgments}
 
-We acknowledge useful discussions with Enrico Ramirez-Ruiz and Alberto
-Rorai.  This work was supported in part by NSF grant AST-1312034 (for
-A.~L.).
+We acknowledge useful discussions with Martin Haehnelt, Enrico
+Ramirez-Ruiz and Alberto Rorai.  This work was supported in part by
+NSF grant AST-1312034 (for A.~L.).  G.~K. gratefully acknowledges
+support by he FP7 ERC Advanced Grant Emergence-320596.
 
 \bibliographystyle{mnras}
 \bibliography{refs} 
